# phone_directory

./: .gitignore  Dockerfile  README.md  phone_directory.json  phone_directory.py  pyproject.toml
scripts/: test.sh
tests/: test_phone_directory.py
